--- a/Views/donhangcuaban.html
+++ b/Views/donhangcuaban.html
@@ -19,6 +19,9 @@
                 <a href="#!diachicuaban" class="list-group-item list-group-item-action">
                     <i class="bi bi-geo-alt me-2"></i> Danh sách địa chỉ
                 </a>
+                <a href="#!thongke" class="list-group-item list-group-item-action">
+                    <i class="bi bi-file-earmark-bar-graph"></i></i> Thống kê
+                </a>
                 <a href="#!resetpassword" class="list-group-item list-group-item-action">
                     <i class="bi bi-key me-2"></i> Đổi mật khẩu
                 </a>
